# cppinsights

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  .gitpod.yml  .mergify.yml  .travis.yml  ASTHelpers.cpp  ASTHelpers.h  AutoStmtHandler.cpp  AutoStmtHandler.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CfrontCodeGenerator.cpp  ClangCompat.h  ClassOperatorHandler.cpp  ClassOperatorHandler.h  CodeGenerator.cpp  CodeGenerator.h  CodeGeneratorTypes.h  CommaOperatorHandler.cpp  CommaOperatorHandler.h  CompilerGeneratedHandler.cpp  CompilerGeneratedHandler.h  Coroutines.md  CoroutinesCodeGenerator.cpp  DPrint.cpp  DPrint.h  FunctionDeclHandler.cpp  FunctionDeclHandler.h  GlobalVariableHandler.cpp  GlobalVariableHandler.h  IfStmtHandler.cpp  IfStmtHandler.h  ImplicitCastHandler.cpp  ImplicitCastHandler.h  Insights.cpp  Insights.h  InsightsBase.cpp  (+41 more)
.github/: FUNDING.yml  grenrc.json  stale.yml
.github/workflows/: ci.yml
.gitpod/: Dockerfile
.theia/: settings.json
docker_buildenv/: Dockerfile  Readme.md  build.sh  build_insights.sh  compile.sh  run.sh
docker_travis/: Dockerfile  Readme.md
docs/: CMakeLists.txt  CommandLineOptions.md  Contents.md  Coroutines.md  DockerContainersOverview.md  Doxyfile.in  DoxygenLayout.xml  Examples.md  ExternalInformationSources.md  Limitations.md  OptionDocumentationGenerator.cpp  OptionDocumentationGenerator.py  Readme.md  footer.html  header.html  opt-alt-syntax-for.md  opt-alt-syntax-subscription.md  opt-autocomplete.md  opt-edu-show-cfront.md  opt-edu-show-coroutine-transformation.md  opt-edu-show-initlist.md  opt-edu-show-lifetime.md  opt-edu-show-noexcept.md  opt-edu-show-padding.md  opt-show-all-callexpr-template-parameters.md  opt-show-all-implicit-casts.md  opt-stdin.md  opt-use-libc++.md  postProcessDoxygen.py  style.css
docs/cmdl-examples/: alt-syntax-for.cpp  alt-syntax-subscription.cpp  autocomplete.cpp  braced-array-initialization.cpp  braced-array-initialization.md  edu-show-cfront.cpp  edu-show-coroutine-transformation.cpp  edu-show-initlist.cpp  edu-show-lifetime.cpp  edu-show-noexcept.cpp  edu-show-padding.cpp  show-all-callexpr-template-parameters.cpp  show-all-implicit-casts.cpp  stdin.cpp  use-libc++.cpp
docs/examples/: auto-uniform-initialization-and-the-equal-sign.cpp  auto-uniform-initialization-and-the-equal-sign.md  auto.cpp  auto.md  braced-array-initialization.md  braced-return-value-and-decltype-auto.cpp  braced-return-value-and-decltype-auto.md  braced-uniform-initialization.cpp  braced-uniform-initialization.md  generic-lambda.cpp  generic-lambda.md  implicit-conversions.cpp  implicit-conversions.md  lambda-with-static-invoke.cpp  lambda-with-static-invoke.md  range-based-for-loop.cpp  range-based-for-loop.md  recursive-template.cpp  recursive-template.md  structured-bindings.cpp  structured-bindings.md
scripts/: Readme.md  bash-autocomplete.sh  clang-tidy-check.sh  deploy_rsa.enc  docker-shell.sh  getinclude.py  github-clang-format-check.sh  github-run-make-tidy.sh  llvm-coverage.py  prepare-release.py  travis-clang-format-check.sh  travis-install-macos-commandline-tools.sh  travis-run-make-tidy.sh  travis_coverage.sh  travis_install.sh  travis_tests.sh
tests/: AlignAsTest.cpp  AlignAsTest.expect  AnonymousStructInMacro2Test.cpp  AnonymousStructInMacro2Test.expect  AnonymousStructInMacro3Test.cpp  AnonymousStructInMacro3Test.expect  AnonymousStructInMacroTest.cpp  AnonymousStructInMacroTest.expect  AnonymousStructTest.cpp  AnonymousStructTest.expect  ArrayInTypedefTest.cpp  ArrayInTypedefTest.expect  AttributesTest.cpp  AttributesTest.expect  AutoHandler2Test.cpp  AutoHandler2Test.expect  AutoHandler3Test.cpp  AutoHandler3Test.expect  AutoHandler4Test.cpp  AutoHandler4Test.expect  AutoHandler5Test.cpp  AutoHandler5Test.expect  AutoHandler6Test.cpp  AutoHandler6Test.expect  AutoHandler7Test.cpp  AutoHandler7Test.expect  AutoHandlerTest.cpp  AutoHandlerTest.expect  BaseToDerivedMemberPointerTest.cpp  BaseToDerivedMemberPointerTest.expect  Basic.Start.Main.P5.2Test.cpp  Basic.Start.Main.P5.2Test.expect  Basic.Start.Main.P5.3Test.cpp  Basic.Start.Main.P5.3Test.expect  Basic.Start.Main.P5.4Test.cpp  Basic.Start.Main.P5.4Test.expect  Basic.Start.Main.P5.Test.cpp  Basic.Start.Main.P5.Test.expect  CStyleCastTest.cpp  CStyleCastTest.expect  (+1192 more)
tests/shell/: test-bash-completion.sh
